# cloudflare_dyndns

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
src/: api.rs  api_response.rs  config.rs  main.rs  misc_serialization.rs  records.rs  update.rs
