[package]
name = "cloudflare_dyndns"
description = "DynDNS client for Cloudflare"
readme = "README.md"
repository = "https://github.com/LordOsslor/cloudflare_dyndns"
version = "0.1.3"
edition = "2021"
authors = ["LordOsslor"]
license = "BSD-3-Clause"
keywords = ["ddns", "dyndns", "dynamic-dns", "cloudflare", "dns-records"]
categories = ["asynchronous","command-line-utilities","web-programming::http-client"]
exclude = [".github/*"]


[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.29"
log = "0.4.20"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_url_params = "0.2.1"
serde_with = "3.4.0"
simple_logger = "4.2.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
toml = "0.7.4"