[package]
name = "cloudflare_dyndns"
description = "DynDNS client for Cloudflare"
readme = "README.md"
repository = "https://github.com/LordOsslor/cloudflare_dyndns"
version = "0.1.7"
edition = "2021"
authors = ["LordOsslor"]
license = "BSD-3-Clause"
keywords = ["ddns", "dyndns", "dynamic-dns", "cloudflare", "dns-records"]
categories = ["asynchronous","command-line-utilities","web-programming::http-client"]
exclude = [".github/*"]


[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
futures = "0.3.30"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_url_params = "0.2.1"
serde_with = "3.6.1"
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
